src/objects/College__c/College__c.object-meta.xml
<CustomObject>
    <description>college</description>
    <label>College</label>
    <nameField>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>College</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>