src/objects/College__c/fields/Lead_Reseller_Technical_Rep__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reseller_Technical_Rep__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Lead.Reseller_Technical_Rep</description>
    <label>Lead.Reseller_Technical_Rep</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>