src/objects/College__c/fields/Lead_Reseller_Technical_Rep_Last_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reseller_Technical_Rep_Last_Name_c__c</fullName>
    <description>Lead.Reseller_Technical_Rep_Last_Name__c</description>
    <label>Lead.Reseller_Technical_Rep_Last_Name__c</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>