src/objects/College__c/fields/Partner_Community_Access_Request__c.field-meta.xml
<CustomField>
    <fullName>Partner_Community_Access_Request__c</fullName>
    <description>Partner_Community_Access_Request__c.Job_Title__c</description>
    <label>Partner_Community_Access_Request__c.Job_</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>